base/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: nine
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: ninekube
spec:
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 9000
      targetPort: http
    - name: https
      port: 9443
      targetPort: https
